Add client properties redirect test

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,14 +7,19 @@
 <body>
 Rest Sample Index Page
 <p>
-<a href="./rest/hello/x/dany">Hello</a>
+<a href="./ars/hello/x/dany">Hello</a>
 <p>
 <a href="./redirect/302.html">302 link</a>
 <p>
 <a href="./redirect/307.html">307 link</a>
 <p>
-<a href="./rest/hello/redirect/302">302 rest</a>
+<a href="./ars/hello/redirect/302">302 rest</a>
 <p>
-<a href="./rest/hello/redirect/307">307 rest</a>
+<a href="./ars/hello/redirect/307">307 rest</a>
+<p>
+<b>Test client properties URL</b><br>
+<a href="./ars/2/clientproperties?clientType=iPhone&clientVersion=2.0&productName=TTC_BETA&responseStatus=302">call client properties BETA</a><br>
+<a href="./ars/2/clientproperties?clientType=iPhone&clientVersion=2.1&productName=TTC_BETA&responseStatus=307">call client properties PROD</a>
+
 </body>
 </html>
